Aligned a few logos to fix window

--- a/source/stylesheets/landing.css
+++ b/source/stylesheets/landing.css
@@ -503,26 +503,25 @@ border: 1px solid #e5e5e5;
 .expedia { background-position:  -137px -1px; height: 130px; width: 156px; top: 26px; }
 .stack_exchange { background-position:  -137px -132px; height: 120px; width: 153px; top: 37px; }
 .nasa { background-position:  -137px -253px; height: 118px; width: 139px; top: 41px; left: 35px; }
-.bell { background-position:  -137px -372px; height: 85px; width: 150px; top: 60px; left: 22px; }
-.at_t { background-position:  -137px -458px; height: 67px; width: 150px; top: 61px;}
+.bell { background-position:  -137px -370px; height: 85px; width: 150px; top: 62px; left: 22px; }
+.at_t { background-position:  -134px -456px; height: 67px; width: 153px; top: 63px;}
 .alibaba { background-position:  -137px -526px; height: 66px; width: 150px; top: 60px;}
 .spacex { background-position:  -137px -593px; height: 19px; width: 150px; top: 90px;}
-.redhat { background-position:  -294px -1px; height: 48px; width: 150px; top: 76px;}
+.redhat { background-position:  -292px 2px; height: 48px; width: 152px; top: 77px;}
 .qualcomm { background-position:  -294px -50px; height: 34px; width: 150px; top: 88px;}
 .archives { background-position:  -294px -85px; height: 25px; width: 150px; top: 88px; }
-.nasdaq { background-position:  -445px -1px; height: 19px; width: 160px; top: 91px; }
+.nasdaq { background-position:  -443px 4px; height: 23px; width: 160px; top: 91px; }
 .interpol { background-position:  -1px -132px; height: 55px; width: 60px; top: 68px; left: 66px;}
 .ibm { background-position:  -1px -188px; height: 55px; width: 104px; left: 48px;}
 .publicis { background-position:  -1px -244px; height: 38px; width: 120px; top: 83px; left: 35px; }
-.oreilly { background-position:  -294px -111px; height: 26px; width: 148px; top: 87px;}
+.oreilly { background-position:  -284px -108px; height: 31px; width: 147px; top: 86px;}
 .avg { background-position:  -1px -283px; height: 55px; width: 132px; top: 73px;}
-.ucla { background-position:  -294px -138px; height: 42px; width: 138px; top: 80px;}
+.ucla { background-position:  -291px -136px; height: 42px; width: 142px; top: 80px;}
 
-  .logos small {
-      color: #18191a;
-      font-family: 'Korolev-Light';
-      font-size: 100%;
-      margin-top: 40px;
+  .logo-disclaimer {
+    font-family: 'Korolev-Light';
+    margin-top: 40px;
+    text-align: center;
   }
 
   .logos h2 {
